# optex

./: LICENSE  README.md  optex.cabal  stack.yaml
src/: Main.hs
